pkg/lang/syntax/testdata/ub/lower/invalid/parse-source-type-parser-error.ub
factory: {
  inputs: {
    bad: { type: list(unknown) }
  }
}
